# sn103

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVIATIONS.md  README.md  VULNERABILITY_REPORT.md  docker-compose.multi-miner.yml  ecosystem.config.js
.claude/commands/: djinn-e2e.md
.github/workflows/: ci.yml  whitepaper-pdf.yml
contracts/: .gas-snapshot  AUDIT_REPORT.md  README.md
contracts/script/: CancelAndRescheduleV4.s.sol  CancelV4AndRescheduleV5.s.sol  Deploy.s.sol  ExecuteUpgrade.s.sol  ExecuteUpgradeV2.s.sol  ExecuteUpgradeV3.s.sol  ExecuteUpgradeV4.s.sol  ExecuteUpgradeV5.s.sol  RedeployAccount.s.sol  RedeployEscrow.s.sol  ScheduleUpgrade.s.sol  ScheduleUpgradeV4.s.sol  Upgrade.s.sol  UpgradeAuditFixes.s.sol  UpgradeAuditV2.s.sol
contracts/src/: Account.sol  Audit.sol  Escrow.sol  (+6 more)
docs/: agent-api-spec.md  integration-boundaries.md  miner.md  validator-setup.md  validator.md
history/: MAINNET-DEPLOY-CHECKLIST.md  UPGRADE-1.md
miner/: .env.example  Dockerfile  FRESH_SERVER_SETUP.md  README.md  pyproject.toml
miner/djinn_miner/: __init__.py  __main__.py  config.py  log_config.py  main.py
miner/djinn_miner/api/: metrics.py  middleware.py  models.py  server.py
miner/djinn_miner/bt/: neuron.py
miner/djinn_miner/core/: checker.py  health.py  notary_sidecar.py  notary_utils.py  proactive_attest.py  proof.py  telemetry.py  tlsn.py  tlsn_bootstrap.py
miner/djinn_miner/data/: __init__.py  odds_api.py  odds_broadcaster.py  provider.py  redis_provider.py
miner/djinn_miner/utils/: firewall.py  watchtower.py
miner/tests/: conftest.py  test_api.py  test_checker.py  test_config.py  test_firewall.py  test_health.py  test_logging.py  test_main.py  test_models.py  test_notary_sidecar.py  test_notary_ticket.py  test_proof.py  test_pse_fallback.py  test_ssrf.py  test_tlsn.py  test_watchtower.py
observability/: docker-compose.yml
scripts/: api-test-harness.mjs  attest-health.mjs  auto-faucet.py  deploy-base-sepolia.sh  e2e-health.mjs  e2e-smoke.sh  execute-upgrade-v4.sh  execute-upgrade-v5.sh  faucet-cron.sh  install-tlsn-tools.sh  miner-firewall.sh  miner-watchdog.sh  network-check.py  pm2-miner.sh  pm2-redis.sh  pre-upgrade-settle.mjs  push.sh  run-multi-miner.sh  settlement-monitor.mjs  shield-graph-push.sh  shield-monitor.sh  signal-stress-test.mjs  stage-and-push.sh  sweep-burns.py  sybil-detector.py  test-attest.py  transfer-ownership.sh  venv-python.sh  watchtower.sh
sdk/: package.json  pnpm-lock.yaml  tsconfig.json
shield/: LICENSE  README.md  pyproject.toml
shield/djinn_tunnel_shield/: __init__.py  binary.py  commit.py  config.py  crypto.py  detect.py  resolver.py  shield.py  tunnel.py
shield/tests/: test_crypto.py  test_detect.py  test_resolver.py
subgraph/: networks.json  schema.graphql  subgraph.yaml
test-results/: e2e-report-2026-03-31.md
tlsn-tools/: Cargo.toml
tlsn-tools/src/: lib.rs
tlsn-verify-wasm/: Cargo.toml
tlsn-verify-wasm/src/: lib.rs
validator/: .env.example  README.md  pyproject.toml
validator/djinn_validator/: __init__.py  config.py  log_config.py  main.py
validator/djinn_validator/api/: burn_gate.py  jwt_auth.py  metrics.py  middleware.py  models.py  server.py
validator/djinn_validator/bt/: neuron.py
validator/djinn_validator/chain/: contracts.py
validator/djinn_validator/core/: activity.py  attestation_log.py  audit_bootstrap.py  audit_set.py  burn_ledger.py  burn_scanner.py  challenges.py  espn.py  mpc.py  mpc_audit.py  mpc_coordinator.py  mpc_orchestrator.py  mpc_outcome.py  ot_network.py  outcomes.py  scoring.py  shares.py  spdz.py  telemetry.py  tlsn.py  tlsn_bootstrap.py  validator_sync.py
validator/djinn_validator/utils/: circuit_breaker.py  watchtower.py
validator/tests/: test_activity.py  test_api.py  test_attestation_log.py  test_audit_set.py  test_body_signing.py  test_burn_ledger.py  test_chain.py  test_challenges.py  test_config.py  test_distributed_mpc.py  test_e2e_audit_cycle.py  test_espn.py  test_integration.py  test_integration_e2e.py  test_integration_lifecycle.py  test_logging.py  test_main.py  test_models.py  test_mpc_audit.py  test_mpc_orchestrator.py  test_mpc_outcome.py  test_mpc_threshold2.py  test_neuron.py  test_notary_session.py  test_notary_ticket.py  test_outcomes.py  test_peer_notary.py  test_peer_notary_hardened.py  test_proof_challenge_integration.py  test_purchase_e2e.py  test_scoring.py  test_spdz.py  test_telemetry.py  test_validator_sync.py  test_watchtower.py
web/: .env.example  e2e-test.mjs  middleware.ts  next.config.js  package.json  playwright.config.ts  playwright.live.config.ts  playwright.stress.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json
(+249 files in other folders)
