[project]
name = "djinn-miner"
version = "0.1.0"
description = "Djinn Protocol Bittensor miner — line availability checking, TLSNotary proof generation"
requires-python = ">=3.11"
dependencies = [
    "bittensor>=10.0.0,<11",
    "fastapi>=0.110.0,<1",
    "uvicorn>=0.30.0,<1",
    "pydantic>=2.7.0,<3",
    "httpx>=0.27.0,<1",
    "python-dotenv>=1.0.0,<2",
    "structlog>=24.1,<26",
    "prometheus-client>=0.21.0,<1",
    "websockets>=13.0,<15",
    "redis>=5.0.0,<6",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0,<1",
    "coverage>=7.0.0,<8",
    "ruff>=0.8.0,<1",
]

[project.scripts]
djinn-miner = "djinn_miner.main:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "E741"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
